--- a/Express/after/package.json
+++ b/Express/after/package.json
@@ -14,6 +14,7 @@
     "nodemon": "^1.18.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "connect-mongodb-session": "^3.1.1",
     "dotenv": "^16.3.1",
