--- a/Express/after/package.json
+++ b/Express/after/package.json
@@ -26,6 +26,7 @@
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.5",
     "mysql2": "^3.5.2",
+    "nodemailer": "^6.9.4",
     "pug": "^2.0.3",
     "sequelize": "^6.32.1"
   }
