--- a/Express/after/package.json
+++ b/Express/after/package.json
@@ -23,6 +23,7 @@
     "express": "^4.16.3",
     "express-handlebars": "^3.0.0",
     "express-session": "^1.17.3",
+    "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.5",
     "mysql2": "^3.5.2",
