--- a/Express/after/package.json
+++ b/Express/after/package.json
@@ -26,6 +26,7 @@
     "express-validator": "^7.0.1",
     "mongodb": "^5.7.0",
     "mongoose": "^7.4.5",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^3.5.2",
     "nodemailer": "^6.9.4",
     "pug": "^2.0.3",
